# MyMahjong

./: .flake8  .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  run_local.py  sample.json  tsconfig.json
cli/: README.md  __init__.py  local_game.py  main.py  package.json  pyproject.toml  remote_game.py  tsconfig.json
cli/src/: UI.ts  index.ts
cli/test/: UI.test.ts  index.test.ts  prompt.test.ts  run.test.ts
core/: README.md  __init__.py  actions.py  ai.py  ai_adapter.py  ai_runner.py  api.py  engine_manager.py  exceptions.py  mahjong_engine.py  models.py  mortal_runner.py  package.json  player.py  practice.py  pyproject.toml  rules.py  shanten_quiz.py  simple_ai.py  tenhou_log.py  tenhou_validator.py  tsconfig.json  wall.py
core/src/: Game.ts  Player.ts  Score.ts  Tile.ts  Wall.ts  index.ts  types.ts
core/test/: analyze.test.ts  chi.test.ts  dealer.test.ts  game.test.ts  index.test.ts  kan.test.ts  player.test.ts  pon.test.ts  ron.test.ts  round.test.ts  score.test.ts  wall.shuffle.test.ts  wall.test.ts  win.test.ts
core/tests/: test_chi_options.py  test_claims_closed_event.py  test_imports.py  test_ippatsu.py  test_simple_ai.py  test_skip_autodraw.py
web/: README.md  index.html  package.json  pyproject.toml  server.py  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.ts  main.tsx  style.css
web/test/: App.test.tsx  CenterDisplay.test.tsx  DiscardPile.test.tsx  Discards.test.tsx  GameBoard.test.tsx  Hand.test.tsx  Melds.test.tsx  ScoreBoard.test.tsx  TileImage.test.tsx  index.test.ts  responsiveCSS.test.ts  style.test.ts  (+2 more)
(+192 files in other folders)
