[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mymahjong-web"
version = "0.1.0"
description = "FastAPI server for MyMahjong"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "mymahjong-core",
    "httpx",
]

[tool.hatch.build]
packages = ["web"]

[tool.hatch.metadata]
allow-direct-references = true

